# Cloud-data-engineering-technologies

./: .ecrc  .editorconfig  .gitignore  .pylintrc  README.md  main.py  pyproject.toml
.github/workflows/: cd.yaml.yml  ci.yaml.yml
TPIUO_Labos_0/: app.js  docker-compose.yaml
TPIUO_Labos_1/consumer/: Dockerfile  consumer.py
TPIUO_Labos_1/producer/: Dockerfile  producer.py
TPIUO_Labos_2/Loader/: Dockerfile  load_to_bq.py
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/: dbt_project.yml  ge_run.py
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/gx/: great_expectations.yml
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/gx/expectations/: .ge_store_backend_id
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/models/bronze/: stackoverflow_questions_bronze.sql  stackoverflow_questions_bronze.yml
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/models/gold/: stackoverflow_questions_gold.sql
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/models/silver/: stackoverflow_questions_silver.sql  stackoverflow_questions_silver.yml
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/notebooks/: 02_ge_silver.ipynb
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/notebooks/.ipynb_checkpoints/: 01_ge_bronze-checkpoint.ipynb
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/notebooks/gx/: great_expectations.yml
TPIUO_Labos_3/tpiuo-lab3-dbt/tpiuo_lab3/notebooks/gx/expectations/: .ge_store_backend_id
